IMPALA-273 /-24: Make heartbeat much quicker, detect duplicate registrations