common/thrift/StateStoreService.thrift
@@ -22,12 +22,25 @@ enum StateStoreServiceVersion {
    V1
 }
 
+// Structure serialised in the Impala backend topic. Each Impalad
+// constructs one TBackendDescriptor, and registers it in the backend
+// topic. Impalads subscribe to this topic to learn of the location of
+// all other Impalads in the cluster.
+struct TBackendDescriptor {
+  // Network address of the Impala service on this backend
+  1: required Types.TNetworkAddress address;
+
+  // IP address corresponding to address.hostname. Explicitly including this saves the
+  // cost of resolution at every Impalad (since IP addresses are needed for scheduling)
+  2: required string ip_address;
+}
+
 // Description of a single entry in a topic
 struct TTopicItem {
   // Human-readable topic entry identifier
   1: required string key;
 
-  // Byte-string value for this topic entry. May not be null-terminated (in that it may 
+  // Byte-string value for this topic entry. May not be null-terminated (in that it may
   // contain null bytes)
   2: required string value;
 }
@@ -45,7 +58,7 @@ struct TTopicUpdate {
   3: required list<string> topic_deletions;
 }
 
-// Set of changes to a single topic, sent to a subscriber. 
+// Set of changes to a single topic, sent to a subscriber.
 struct TTopicDelta {
   // Name of the topic this delta applies to
   1: required string topic_name;
@@ -66,7 +79,7 @@ struct TTopicRegistration {
   // Human readable key for this topic
   1: required string topic_name;
 
-  // True if updates to this topic from this subscriber should be removed upon the 
+  // True if updates to this topic from this subscriber should be removed upon the
   // subscriber's failure or disconnection
   2: required bool is_transient;
 }
@@ -91,7 +104,7 @@ struct TRegisterSubscriberResponse {
 }
 
 service StateStoreService {
-  // Register a single subscriber. Note that after a subscriber is registered, no new 
+  // Register a single subscriber. Note that after a subscriber is registered, no new
   // topics may be added.
   TRegisterSubscriberResponse RegisterSubscriber(1: TRegisterSubscriberRequest params);
 }
@@ -113,8 +126,7 @@ struct TUpdateStateResponse {
 }
 
 service StateStoreSubscriber {
-  // Heartbeat message sent by the state-store, containing a list of topic updates. 
+  // Heartbeat message sent by the state-store, containing a list of topic updates.
   // Response is list of updates published by the subscriber.
   TUpdateStateResponse UpdateState(1: TUpdateStateRequest params);
 }
-
